subida de archivos

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -34,6 +34,9 @@
 
         }
     </script>
+
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5c7ad877953ee545f4f96a36-67.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1YzdhZDg3Nzk1M2VlNTQ1ZjRmOTZhMzYiLCJub21icmUiOiJUZXN0MSIsImVtYWlsIjoiVGVzdDFAZ21haWwuY28iLCJpbWciOiIiLCJfX3YiOjB9LCJpYXQiOjE1NTIxOTE4NzIsImV4cCI6MTU1MjM2NDY3Mn0.6zh4Mw3bnPaLDhq75gMLTi4dOqqOy7OGBf1NofhC_Y0"
+        alt="" /> -->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <a href="#" onclick="signOut();">Sign out</a>
